--- a/index.html
+++ b/index.html
@@ -10,7 +10,38 @@
 </head>
 
 <body>
-    <h1>Test!</h1>
+    <div class="main">
+        <div class="hero-image">
+            <div class="logo"></div>
+        </div>
+        <div class="form-content">
+            <div class="header">
+                <p>This is not a real online service! You know you need something like this in yor life to help you realize your deepest dreams. Sign up <em>now</em> to get started.</p>
+                <p>You <em>know</em> you want to.</p>
+            </div>
+            <div class="form-inputs">
+                <p>Let's do this!</p>
+
+                <label for="fname">First Name</label>
+                <input type="text" id="fname" name="fname" required>
+
+                <label for="lname">Last Name</label>
+                <input type="text" id="lname" name="lname" required>
+
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" required>
+
+                <label for="phone">Phone Number</label>
+                <input type="tel" id="phone" name="phone" required>
+
+                <label for="password">Password</label>
+                <input type="password" id="password" name="password" required>
+
+                <label for="confirm-password">Confirm Password</label>
+                <input type="confirm-password" id="confirm-password" name="confirm-password" required>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
