--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
 
 <body>
     <div class="main">
-        <div class="hero-image">
-            <div class="logo"></div>
+        <div class="img-section">
+            <div class="logo-banner">
+                <img src="img/odin-lined.png" alt="Odin logo">
+                ODIN
+            </div>
         </div>
         <div class="form-content">
             <div class="header">
