--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
                 <img src="img/odin-lined.png" alt="Odin logo">
                 ODIN
             </div>
+            <div class="attribution-bg-img">
+                <p>Photo by <a href="https://unsplash.com/@haliewestphoto?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Halie West</a> on <a href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></p>
+            </div>
         </div>
         <div class="form-content">
             <div class="header">
