--- a/index.html
+++ b/index.html
@@ -17,35 +17,57 @@
                 ODIN
             </div>
             <div class="attribution-bg-img">
-                <p>Photo by <a href="https://unsplash.com/@haliewestphoto?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Halie West</a> on <a href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></p>
+                <p>Photo by <a
+                        href="https://unsplash.com/@haliewestphoto?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Halie
+                        West</a> on <a
+                        href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+                </p>
             </div>
         </div>
-        <div class="form-content">
+        <div class="form-section">
             <div class="header">
-                <p>This is not a real online service! You know you need something like this in yor life to help you realize your deepest dreams. Sign up <em>now</em> to get started.</p>
+                <p>This is not a real online service! You know you need something like this in yor life to help you
+                    realize your deepest dreams. Sign up <em>now</em> to get started.</p>
                 <p>You <em>know</em> you want to.</p>
             </div>
-            <div class="form-inputs">
-                <p>Let's do this!</p>
-
-                <label for="fname">First Name</label>
-                <input type="text" id="fname" name="fname" required>
-
-                <label for="lname">Last Name</label>
-                <input type="text" id="lname" name="lname" required>
-
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email" required>
-
-                <label for="phone">Phone Number</label>
-                <input type="tel" id="phone" name="phone" required>
-
-                <label for="password">Password</label>
-                <input type="password" id="password" name="password" required>
-
-                <label for="confirm-password">Confirm Password</label>
-                <input type="confirm-password" id="confirm-password" name="confirm-password" required>
-            </div>
+            <form action="#">
+                <div class="form-inputs">
+                    <p>Let's do this!</p>
+                    <div class="inputs">
+                        <div class="row">
+                            <div class="input">
+                                <label for="fname">First Name</label>
+                                <input type="text" id="fname" name="fname" class="input" required>
+                            </div>
+                            <div class="input">
+                                <label for="lname">Last Name</label>
+                                <input type="text" id="lname" name="lname" class="input" required>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="input">
+                                <label for="email">Email</label>
+                                <input type="email" id="email" name="email" class="input" required>
+                            </div>
+                            <div class="input">
+                                <label for="phone">Phone Number</label>
+                                <input type="tel" id="phone" name="phone" class="input" required>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="input">
+                                <label for="password">Password</label>
+                                <input type="password" id="password" name="password" class="input" required>
+                            </div>
+                            <div class="input">
+                                <label for="confirm-password">Confirm Password</label>
+                                <input type="confirm-password" id="confirm-password" name="confirm-password"
+                                    class="input" required>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </form>
         </div>
     </div>
 </body>
