--- a/index.html
+++ b/index.html
@@ -31,38 +31,37 @@
                 <p>You <em>know</em> you want to.</p>
             </div>
             <form action="#">
-                <div class="form-inputs">
+                <div class="inputs-container">
                     <p>Let's do this!</p>
                     <div class="inputs">
                         <div class="row">
                             <div class="input">
                                 <label for="fname">First Name</label>
-                                <input type="text" id="fname" name="fname" class="input" required>
+                                <input type="text" id="fname" name="fname" required>
                             </div>
                             <div class="input">
                                 <label for="lname">Last Name</label>
-                                <input type="text" id="lname" name="lname" class="input" required>
+                                <input type="text" id="lname" name="lname" required>
                             </div>
                         </div>
                         <div class="row">
                             <div class="input">
                                 <label for="email">Email</label>
-                                <input type="email" id="email" name="email" class="input" required>
+                                <input type="email" id="email" name="email" required>
                             </div>
                             <div class="input">
                                 <label for="phone">Phone Number</label>
-                                <input type="tel" id="phone" name="phone" class="input" required>
+                                <input type="tel" id="phone" name="phone" required>
                             </div>
                         </div>
                         <div class="row">
                             <div class="input">
                                 <label for="password">Password</label>
-                                <input type="password" id="password" name="password" class="input" required>
+                                <input type="password" id="password" name="password" required>
                             </div>
                             <div class="input">
                                 <label for="confirm-password">Confirm Password</label>
-                                <input type="confirm-password" id="confirm-password" name="confirm-password"
-                                    class="input" required>
+                                <input type="confirm-password" id="confirm-password" name="confirm-password" required>
                             </div>
                         </div>
                     </div>
