--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
         <div class="form-section">
             <div class="header">
-                <p>This is not a real online service! You know you need something like this in yor life to help you
+                <p>This is not a real online service! You know you need something like this in your life to help you
                     realize your deepest dreams. Sign up <em>now</em> to get started.</p>
                 <p>You <em>know</em> you want to.</p>
             </div>
@@ -51,7 +51,7 @@
                             </div>
                             <div class="input">
                                 <label for="phone">Phone Number</label>
-                                <input type="tel" id="phone" name="phone" required>
+                                <input type="tel" id="phone" name="phone" required pattern="\d{3}[\-]\d{3}[\-]\d{4}">
                             </div>
                         </div>
                         <div class="row">
@@ -61,12 +61,18 @@
                             </div>
                             <div class="input">
                                 <label for="confirm-password">Confirm Password</label>
-                                <input type="confirm-password" id="confirm-password" name="confirm-password" required>
+                                <input type="password" id="confirm-password" name="confirm-password" required>
                             </div>
                         </div>
                     </div>
                 </div>
+                <div class="submit-btn">
+                    <button type="submit">Create Account</button>
+                </div>
             </form>
+            <div class="log-in">
+                <p>Already have an account? <a href="#">Log in</a></p>
+            </div>
         </div>
     </div>
 </body>
